test/Fail/Issue308b.err
Issue308b.agda:6.18: error: [ParseError]
Malformed syntax declaration: syntax must not contain adjacent holes (x)
